--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.0'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id("org.hibernate.orm") version "7.0.0.Beta2"
+	id("org.flywaydb.flyway") version "11.0.0"
 }
 
 group = 'goit'
@@ -23,6 +25,19 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'com.h2database:h2:2.3.232'
+	implementation 'org.hibernate.orm:hibernate-core:6.5.2.Final'
+	implementation 'org.flywaydb:flyway-core:10.15.2'
+}
+
+
+flyway {
+	url = 'jdbc:h2:~/spring'
+	user = 'sa'
+	password = '123'
+	locations = ['classpath:db/migration']
+
 
 }
 
