--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	implementation 'com.h2database:h2:2.3.232'
 	implementation 'org.hibernate.orm:hibernate-core:6.5.2.Final'
 	implementation 'org.flywaydb:flyway-core:10.15.2'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
 }
 
 
