--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.security.user.name=user
+spring.security.user.password=default
